Fix Ant Design input on mobile

--- a/src/app/input.scss
+++ b/src/app/input.scss
@@ -121,9 +121,9 @@ body.is-mobile {
 
 body.is-phone {
   textarea,
-  input[type="text"]:not(.metadata-container input):not(.prompt input),
-  input[type="number"],
-  button:not(.clickable-icon):not(.modal:not(.mod-settings):not(.mod-community-modal) button):not(.view-content button),
+  input[type="text"]:not(.metadata-container input):not(.prompt input):not(.ant-input),
+  input[type="number"]:not(.ant-input),
+  button:not(.clickable-icon):not(.modal:not(.mod-settings):not(.mod-community-modal) button):not(.view-content button):not(.ant-btn):not(.ant-switch),
   select,
   .dropdown {
     justify-content: flex-start;
@@ -147,9 +147,13 @@ body.is-phone {
 
 body.is-tablet {
   textarea,
-  input[type="text"]:not(.metadata-container input):not(.prompt input),
-  input[type="number"],
-  button:not(.clickable-icon):not(.modal:not(.mod-settings) button):not(.view-content button) {
+  input[type="text"]:not(.metadata-container input):not(.prompt input):not(.ant-input),
+  input[type="number"]:not(.ant-input),
+  button:not(.clickable-icon):not(.modal:not(.mod-settings) button):not(.view-content button):not(.ant-btn):not(.ant-switch) {
     padding: 4px 16px;
+  }
+
+  .ant-switch {
+    padding: 0;
   }
 }
